cargo-aprz-lib/src/reports/snapshots/cargo_aprz_lib__reports__snapshot_tests__single_crate_csv.snap
---
source: cargo-aprz-lib/src/reports/mod.rs
assertion_line: 304
expression: csv_output
---
Metric,comprehensive-crate v2.0.0
Appraisals,LOW RISK
Reasons,✔️ coverage; ✔️ active; ✔️ maintained
crate.name,comprehensive-crate
crate.version,2.0.0
crate.keywords,"test, comprehensive, snapshot"
stability.crate_created_at,2023-06-01
usage.total_downloads,9876543
community.repo_stars,12345
trust.code_coverage_percentage,99.99
trust.ci_workflows,true
