cargo-aprz-lib/src/reports/snapshots/cargo_aprz_lib__reports__snapshot_tests__single_crate_json.snap
---
source: cargo-aprz-lib/src/reports/mod.rs
assertion_line: 308
expression: json_output
---
{
  "crates": [
    {
      "appraisal": {
        "reasons": [
          "coverage",
          "active",
          "maintained"
        ],
        "result": "LOW RISK"
      },
      "metrics": {
        "community.repo_stars": 12345,
        "crate.keywords": [
          "test",
          "comprehensive",
          "snapshot"
        ],
        "crate.name": "comprehensive-crate",
        "crate.version": "2.0.0",
        "stability.crate_created_at": "2023-06-01",
        "trust.ci_workflows": true,
        "trust.code_coverage_percentage": 99.99,
        "usage.total_downloads": 9876543
      },
      "name": "comprehensive-crate",
      "version": "2.0.0"
    }
  ]
}
